Fix wrong colour for autocomplete text

--- a/app/assets/stylesheets/_homepage/_autocomplete.sass
+++ b/app/assets/stylesheets/_homepage/_autocomplete.sass
@@ -3,7 +3,7 @@
   margin: 15px 0
 
 .autocomplete__result
-  color: #fff
+  color: #07C
   display: block
   padding: 5px 10px
 
